--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -19,7 +19,7 @@
     <a href="https://www.lewagon.com" class="navbar-wagon-item navbar-wagon-link">Wagon</a>
 
 
-    <%= link_to "Team", "team.html" %>
+ <%= link_to "Team", "team.html", class: "btn btn-primary" %>
     <!-- a href="/team.html.erb" class="navbar-wagon-item navbar-wagon-link">Team</a> -->
 
     <!-- Notification link-->
