--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,3 +1,5 @@
+<h2> Our team </h2>
+
 <ul class="list-inline text-center">
   <% ["andrea", "seb", "paul"].each do |member| %>
     <li>
@@ -7,3 +9,12 @@
   <% end %>
 </ul>
 
+<h3 class = "padded">
+<a href="mailto:contact@airbnb.com">contact@airbnb.com</a>
+</h3>
+
+<!-- <ul class="list-inline text-center">
+    <li>
+      <h3>
+</ul>
+ -->
